--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Belal Ahmed Siddiqui
-#logo: /assets/img/headshot_circle.png
+logo: assets/img/profile.jpg
 description: Welcome To My Portfolio.
-show_downloads: true
+show_downloads: false
 theme: jekyll-theme-minimal
