--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Belal Ahmed Siddiqui
 logo: assets/img/profile.jpg
-description: Welcome To My Portfolio.
+#description: Welcome To My Portfolio.
 show_downloads: false
 theme: jekyll-theme-minimal
