--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Belal Ahmed Siddiqui
 logo: assets/img/profile.jpg
 description: Welcome To My Portfolio.
 show_downloads: false
-theme: jekyll-theme-hacker
+theme: jekyll-theme-chirpy
