--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,7 @@ description: Welcome To My Portfolio.
 show_downloads: false
 
 # Set the theme
-remote_theme: pages-themes/midnight@v0.2.0
+theme: minimal-mistakes-jekyll
 
-# Add this line to the plugins list if you already have one
-plugins:
-  - jekyll-remote-theme
+# Additional configuration options for Minimal Mistakes
+minimal_mistakes_skin: "air"
