--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
-- jekyll-remote-theme
+  - jekyll-remote-theme
 title: Your Name - Portfolio
 description: Welcome to my professional portfolio
 readme_index:
@@ -8,4 +8,7 @@ readme_index:
   remove_originals: false
 github:
   is_project_page: false
+
+# New field for an image
+image: /assets/images/profile.jpg
 
