--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,11 @@
-remote_theme: pages-themes/cayman@v0.2.0
-plugins:
-  - jekyll-remote-theme
-title: Your Name - Portfolio
-description: Welcome to my professional portfolio
-readme_index:
-  enabled: true
-  remove_originals: false
-github:
-  is_project_page: false
-
-# New field for an image
-image: /assets/images/profile.jpg
-
+remote_theme: daattali/beautiful-jekyll@5.0.0
+title: Belal Ahmed Siddiqui - Portfolio
+description: Welcome To My Portfolio.
+navbar-links:
+  About Me: "aboutme"
+  Projects: "projects"
+  Contact: "contact"
+social-network-links:
+  email: "your-email@example.com"
+  github: your-github-username
+  linkedin: your-linkedin-username
