--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,6 @@ navbar-links:
   Projects: "projects"
   Contact: "contact"
 social-network-links:
-  email: "your-email@example.com"
-  github: your-github-username
-  linkedin: your-linkedin-username
+  email: "belalahmedsiddiqui8@gmail.com"
+  github: stoicsapien1
+  linkedin: stoicsapien1
