--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ remote_theme: daattali/beautiful-jekyll@5.0.0
 title: Belal Ahmed Siddiqui - Portfolio
 description: Welcome To My Portfolio.
 navbar-links:
-  About Me: "aboutme"
+  About Me: "/about"
   Projects: "projects"
   Contact: "contact"
 social-network-links:
